--- a/.circleci/ config.yml
+++ b/.circleci/ config.yml
@@ -32,3 +32,5 @@ jobs: # a collection of steps
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: target/springbootproject-circle-ci-example-0.0.1-SNAPSHOT.jar
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+
+#changes for master branch
