--- a/.circleci/ config.yml
+++ b/.circleci/ config.yml
@@ -1,4 +1,8 @@
 version: 2 # use CircleCI 2.0
+
+orbs:
+  maven: circleci/maven@0.0.12
+
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
 
@@ -32,6 +36,7 @@ jobs: # a collection of steps
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: target/springbootproject-circle-ci-example-0.0.1-SNAPSHOT.jar
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      
 workflows:
     build:
       jobs:
